--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <div class="about_me">
         <h2> ОБО МНЕ</h2>
         <div class="title__container2">
-            <img src="src/img/Картинки/foto.png" alt="foto">
+            <img src="/src/img/Картинки/foto.png" alt="foto">
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante <br> facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibn. </p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec omare diam. Sed commodo nibn ante <br>facilisis bibendum dolor feugiat at. Duis sed dapibus leo nec ornare diam commodo nibn.</p>
             <input type="submit" value="Скачать резюме">
