макет сайта со стилями
Домашнее задание №2

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
     <div class="keys">
         <h2>КЕЙСЫ</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed Dapibus leo nec ornare diamcoccodo nidn ante facilisis.</p>
-        <img src="src/img/Картинки/keys.jpeg" alt="foto">
+        <img src="/src/img/Картинки/keys.jpeg" alt="foto">
         <div class="title__container4">
             <h3 class="client">CLIENT:</h3>
             <p class="p2"> Какая-то компания</p>
@@ -131,7 +131,7 @@
     <div class="reviews">
         <div class="title__container7">
             <h2>ОТЗЫВЫ</h2>
-            <img src"src/img/Картинки/otzyv.png" alt="foto">
+            <img src"/src/img/Картинки/otzyv.png" alt="foto">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diam. Sed commodo nibh ante <br> facilisis bibendum dolor feugiat at duis sed dapidus leo nec ornare diam.</p>
             <p class="fio">Михаил, Ген директор ПАО "Газпром".</p>
         </div>
